after js events

--- a/27-handling-events/index.html
+++ b/27-handling-events/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="index.js"></script>
+  <script src="data.js"></script>
+  <script defer src="index.js"></script>
   <link rel="stylesheet" href="main.css">
   <title>zkpr.</title>
 </head>
@@ -17,7 +18,7 @@
     </div>
   </header>
   <main>
-    <section class="container">
+    <section class="container another-class">
       <form id="animal-form" class="form">
         <input type="text" name="name" placeholder="Enter animal name..." autocomplete="off">
         <input type="text" name="image_url" placeholder="Enter image url..." autocomplete="off">
