--- a/28-event-delegation/index.html
+++ b/28-event-delegation/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="data.js"></script>
   <script defer src="index.js"></script>
-  <script defer src="propogation-demo.js"></script>
+  <!-- <script defer src="propogation-demo.js"></script> -->
   <link rel="stylesheet" href="main.css">
   <title>zkpr.</title>
 </head>
