--- a/35-rails-api-review/dumbo-dictionary-frontend/index.html
+++ b/35-rails-api-review/dumbo-dictionary-frontend/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
-  <script defer src="fetches.js"></script>
+  <script src="fetches.js"></script>
   <script defer src="index.js"></script>
   <title>Document</title>
 </head>
