--- a/37-practical-oojs/zkpr_frontend/index.html
+++ b/37-practical-oojs/zkpr_frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script defer src="robo.js"></script>
+  <script defer src="index.js"></script>
   <link rel="stylesheet" href="main.css">
   <title>zkpr.</title>
 </head>
