--- a/37-practical-oojs/zkpr_frontend/index.html
+++ b/37-practical-oojs/zkpr_frontend/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="APIAdapter.js"></script>
+  <script src="Animal.js"></script>
   <script defer src="index.js"></script>
   <link rel="stylesheet" href="main.css">
   <title>zkpr.</title>
