--- a/38-html-canvas-games/index.html
+++ b/38-html-canvas-games/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <script defer src="index.js"></script>
+  <script defer src="./src/index.js"></script>
   <title>Endless Runner</title>
 </head>
 <body>
