--- a/38-html-canvas-games/index.html
+++ b/38-html-canvas-games/index.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <!-- <script defer src="./bubbler.js"></script> -->
-  <!-- <script defer src="./s.js"></script> -->
-  <!-- <script defer src="./src/index.js"></script> -->
+  <!-- <script defer src="./demo/bubbler.js"></script> -->
+  <!-- <script defer src="./demo/s.js"></script> -->
+  <script src="./src/Player.js"></script>
+  <script defer src="./src/index.js"></script>
   <title>Endless Running</title>
 </head>
 <body>
