after js canvas

--- a/38-html-canvas-games/index.html
+++ b/38-html-canvas-games/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <!-- <script defer src="./demo/bubbler.js"></script> -->
   <!-- <script defer src="./demo/s.js"></script> -->
+  <script src="./src/Obstacle.js"></script>
   <script src="./src/Player.js"></script>
   <script defer src="./src/index.js"></script>
   <title>Endless Running</title>
